scripts/nullness/wpi/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8.txt
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/strategy/StrategyPatternTutorial.java:32: error: (dereference.of.nullable) $$ 1 $$ this.learningStrategy $$ ( 670, 691 ) $$ dereference of possibly-null reference this.learningStrategy
        this.learningStrategy.learn();
            ^
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/factory/Theatre.java:59: error: (dereference.of.nullable) $$ 1 $$ this.repertoire $$ ( 1140, 1155 ) $$ dereference of possibly-null reference this.repertoire
        this.repertoire.put(play, spectacle);
            ^
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/factory/Theatre.java:70: error: (dereference.of.nullable) $$ 1 $$ this.repertoire $$ ( 1385, 1400 ) $$ dereference of possibly-null reference this.repertoire
        Spectacle spectacle = this.repertoire.get(name);
                                  ^
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/bridge/Camera.java:33: error: (dereference.of.nullable) $$ 1 $$ this.lightRecorder $$ ( 698, 716 ) $$ dereference of possibly-null reference this.lightRecorder
        this.lightRecorder.recordLight();
            ^
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:96: error: (dereference.of.nullable) $$ 1 $$ this.current $$ ( 2252, 2264 ) $$ dereference of possibly-null reference this.current
            Station next = this.current.getStation();
                               ^
../original/url6be695d833_nikoloz_pachuashvili_Patterneria_tgz-pJ8-org_patterneria_MainJ8/src/org/patterneria/iterator/MetroLine.java:126: error: (dereference.of.nullable) $$ 1 $$ current $$ ( 2883, 2890 ) $$ dereference of possibly-null reference current
            Station next = current.station;
                           ^
6 errors
